--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.qiniu:happy-dns:0.2.8'
     compile files('libs/pldroid-player-1.5.1.jar')
-    compile files('libs/pldroid-rtc-streaming-2.0.3.jar')
+//    compile files('libs/pldroid-rtc-streaming-2.0.3.jar')
     compile 'com.android.support:multidex:1.0.1'
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4'
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.github.angads25:filepicker:1.0.6'
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.android.support:design:26.1.0'
+    implementation files('libs/pldroid-rtc-streaming-2.0.3.1.jar')
 }
